src/test/ui/rfc-2093-infer-outlives/infer-static.stderr
error: rustc_outlives
  --> $DIR/infer-static.rs:5:1
   |
LL | / struct Foo<U> {
LL | |     bar: Bar<U>
LL | | }
   | |_^
   |
   = note: U : 'static

error: aborting due to previous error

